crabbing-interpreters/tests/testsuite/snapshots/testsuite__scope-craftinginterpreters__test__field__set_on_bool.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/field/set_on_bool.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (expr (= (setattr true foo) "value")))

----- stderr -----
